2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.XmlEditor.addin.xml: Bumped MD version.

2010-03-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.XmlEditor.addin.xml:
	* MonoDevelop.XmlEditor/XmlEditorService.cs:
	* MonoDevelop.Xml.Formatting/XmlFormatter.cs:
	* MonoDevelop.Xml.Formatting/MonoXmlPolicy.xml:
	* MonoDevelop.Xml.Formatting/XmlFormatterWriter.cs:
	* MonoDevelop.Xml.Formatting/XmlFormattingPolicy.cs:
	* MonoDevelop.Xml.Formatting/XmlFormattingPolicyPanel.cs:
	* MonoDevelop.Xml.Formatting/XmlFormattingPolicyPanelWidget.cs:
	* gtk-gui/MonoDevelop.Xml.Formatting.XmlFormattingPolicyPanelWidget.cs:
	  New xml formatting policy.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.XmlEditor.addin.xml:
	* MonoDevelop.XmlEditor/Commands.cs:
	* MonoDevelop.XmlEditor/XmlFormatter.cs:
	* MonoDevelop.XmlEditor/XmlEditorView.cs:
	* MonoDevelop.XmlEditor/XmlEditorService.cs:
	* MonoDevelop.Xml.Formatting/XmlFormatter.cs:
	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanel.cs:
	* MonoDevelop.XmlEditor/XmlEditorCommandBase.cs:
	* MonoDevelop.XmlEditor/XmlEditorViewContent.cs:
	* MonoDevelop.XmlEditor/OpenStylesheetCommand.cs:
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.XPath/XPathQueryWidget.cs:
	* MonoDevelop.XmlEditor/XmlCompletionListWindow.cs:
	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs:
	* MonoDevelop.XmlEditor.Gui/XmlEditorOptionsPanel.cs:
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/IXmlCompletionProvider.cs:
	* MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/EmptyXmlCompletionProvider.cs: