@@ -1,3 +1,10 @@
+2010-04-13  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.XmlEditor/XmlFormatter.cs:
+	* MonoDevelop.Xml.Formatting/XmlFormatter.cs:
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track
+	  API changes.
+
 2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* AssemblyInfo.cs:
